--- a/api/openapi/api.yml
+++ b/api/openapi/api.yml
@@ -17,7 +17,7 @@ info:
 
     ## API BASE URL
 
-    The base URL of our API is: `https://api.stucode.com/v1`
+    The base URL of our API is: `https://api-stucode.vercel.app/v1`
 
     ## Authentication
 
@@ -30,7 +30,7 @@ info:
     We're excited to have you join the StuCode community and explore the possibilities of our API. Happy coding!
 servers:
   - url: /v1
-  - url: https://api.stucode.com/v1
+  - url: https://api-stucode.vercel.app/v1
 tags:
   - name: user
     description: Endpoints related to user information and operations.
@@ -203,8 +203,8 @@ paths:
   /user:
     get:
       tags: [user]
-      security:
-        - bearerAuth: []
+      # security:
+      #   - bearerAuth: []
       summary: Retrieve a list of users
       description: |
         This endpoint allows retrieving a list of users from the system.
@@ -310,8 +310,8 @@ paths:
   /user/{id}:
     get:
       tags: [user]
-      security:
-        - bearerAuth: []
+      # security:
+      #   - bearerAuth: []
       summary: Retrieve user details
       description: |
         This endpoint is used to retrieve specific details of a user using its ID.
@@ -380,8 +380,8 @@ paths:
                 $ref: '#/components/schemas/InternalServerError'
     put:
       tags: [user]
-      security:
-        - bearerAuth: []
+      # security:
+      #   - bearerAuth: []
       summary: Update user details
       description: |
         This endpoint is used to update specific details of a user using its ID.
@@ -473,8 +473,8 @@ paths:
                 $ref: '#/components/schemas/InternalServerError'
     delete:
       tags: [user]
-      security:
-        - bearerAuth: []
+      # security:
+      #   - bearerAuth: []
       summary: Delete user details
       description: |
         This endpoint is used to delete a user using its ID.
@@ -542,8 +542,8 @@ paths:
   /article:
     post:
       tags: [article]
-      security:
-        - bearerAuth: []
+      # security:
+      #   - bearerAuth: []
       summary: Create a new article.
       description: |
         Endpoint to create a new article. Requires the user's ID, article image, title, and content in the request body in JSON format. The user's ID must be in UUID format. Upon successful creation, the endpoint returns the details of the created article.
@@ -629,8 +629,8 @@ paths:
                 $ref: '#/components/schemas/InternalServerError'
     get:
       tags: [article]
-      security:
-        - bearerAuth: []
+      # security:
+      #   - bearerAuth: []
       summary: Retrieve a list of articles
       description: |
         This endpoint allows retrieving a list of articles from the system.
@@ -742,8 +742,8 @@ paths:
   /article/{id}:
     get:
       tags: [article]
-      security:
-        - bearerAuth: []
+      # security:
+      #   - bearerAuth: []
       summary: Retrieve article details
       description: |
         This endpoint is used to retrieve specific details of an article using its ID.
@@ -812,8 +812,8 @@ paths:
                 $ref: '#/components/schemas/InternalServerError'
     put:
       tags: [article]
-      security:
-        - bearerAuth: []
+      # security:
+      #   - bearerAuth: []
       summary: Update article details
       description: |
         This endpoint is used to update specific details of a article using its ID.
@@ -899,8 +899,8 @@ paths:
                 $ref: '#/components/schemas/InternalServerError'
     delete:
       tags: [article]
-      security:
-        - bearerAuth: []
+      # security:
+      #   - bearerAuth: []
       summary: Delete article details
       description: |
         This endpoint is used to delete an article using its ID.
