--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "coverage": "jest --config ./jest.config.json --verbose --detectOpenHandles --coverage",
     "prepare": "husky",
     "pre-commit": "eslint . && lint-staged",
-    "lint": "eslint 'src/**/*.js'",
-    "start:local": "nodemon --inspect=9238 -r dotenv/config api/index.js"
+    "lint": "eslint .",
+    "start:local": "NODE_ENV=local nodemon --inspect=9238 api/index.js",
+    "start": "NODE_ENV=production node api/index.js"
   },
   "lint-staged": {
     "*.js": [
@@ -28,11 +29,10 @@
   },
   "homepage": "https://github.com/michaelhr97/api.stucode#readme",
   "devDependencies": {
-    "@commitlint/cli": "^19.2.1",
-    "@commitlint/config-conventional": "^19.1.0",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@faker-js/faker": "^8.4.1",
     "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
