--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "pre-commit": "eslint . && lint-staged",
     "lint": "eslint .",
     "start:local": "NODE_ENV=local nodemon --inspect=9238 api/index.js",
-    "start": "NODE_ENV=production node api/index.js",
-    "build": "npx prisma db push && npx prisma generate && next build"
+    "build": "npm run generate",
+    "start": "NODE_ENV=production npm run build && node build/index.js"
   },
   "lint-staged": {
     "*.js": [
